force-app/main/default/objects/Branch1__c/Branch1__c.object-meta.xml
<CustomObject>
    <label>Branch1</label>
    <nameField>
        <displayFormat>B!-{000}</displayFormat>
        <label>Branch1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>