force-app/main/default/objects/Branch1__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <defaultValue>&apos;Ad-11&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>