force-app/main/default/objects/Branch1__c/fields/NewEmail__c.field-meta.xml
<CustomField>
    <fullName>NewEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NewEmail</label>
    <type>Email</type>
</CustomField>