force-app/main/default/objects/Branch1__c/listViews/new_Branchh_List.listView-meta.xml
<ListView>
    <fullName>new_Branchh_List</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>NewForm__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Branch2__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>new Branchh List</label>
    <language>en_US</language>
</ListView>