force-app/main/default/objects/Branch1__c/listViews/new_Branchh_List_owner.listView-meta.xml
<ListView>
    <fullName>new_Branchh_List_owner</fullName>
    <columns>NAME</columns>
    <columns>NewBranch2__c</columns>
    <columns>NewEmail__c</columns>
    <columns>NewForm__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>new Branchh List owner</label>
    <language>en_US</language>
</ListView>